[fix] scssファイル改修

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2,4 +2,5 @@
 @forward './overwrite';
 @forward './utility';
 @forward './variables';
+@forward './colors';
 @import url(//fonts.googleapis.com/css?family=Roboto&display=swap);
