--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -17,21 +17,21 @@ $grey-lighten-2: #ccc;
 $grey-lighten-3: #f2f2f2;
 $grey-lighten-4: #f5f5f5;
 $colors: (
-  'red-darken-4': $red-darken-4,
-  'cyan-lighten-1': $cyan-lighten-1,
-  'light-blue-darken-1': $light-blue-darken-1,
-  'amber-lighten-5': $amber-lighten-5,
-  'amber-lighten-4': $amber-lighten-4,
-  'amber-darken-2': $amber-darken-2,
-  'orange-base': $orange-base,
-  'deep-orange-lighten-2': $deep-orange-lighten-2,
-  'deep-orange-darken-1': $deep-orange-darken-1,
-  'grey-darken-4': $grey-darken-4,
-  'grey-darken-3': $grey-darken-3,
-  'grey-darken-2': $grey-darken-2,
-  'grey-darken-1': $grey-darken-1,
-  'grey-lighten-1': $grey-lighten-1,
-  'grey-lighten-2': $grey-lighten-2,
-  'grey-lighten-3': $grey-lighten-3,
-  'grey-lighten-4': $grey-lighten-4
+  // 'red-darken-4': $red-darken-4,
+  // 'cyan-lighten-1': $cyan-lighten-1,
+  // 'light-blue-darken-1': $light-blue-darken-1,
+  // 'amber-lighten-5': $amber-lighten-5,
+  // 'amber-lighten-4': $amber-lighten-4,
+  // 'amber-darken-2': $amber-darken-2,
+  // 'orange-base': $orange-base,
+  // 'deep-orange-lighten-2': $deep-orange-lighten-2,
+  // 'deep-orange-darken-1': $deep-orange-darken-1,
+  // 'grey-darken-4': $grey-darken-4,
+  // 'grey-darken-3': $grey-darken-3,
+  // 'grey-darken-2': $grey-darken-2,
+  // 'grey-darken-1': $grey-darken-1,
+  // 'grey-lighten-1': $grey-lighten-1,
+  // 'grey-lighten-2': $grey-lighten-2,
+  // 'grey-lighten-3': $grey-lighten-3,
+  // 'grey-lighten-4': $grey-lighten-4
 );
