--- a/assets/css/_colors.scss
+++ b/assets/css/_colors.scss
@@ -14,10 +14,10 @@
   }
 }
 @each $name, $color in var.$colors {
-  .#{$name} {
+  .text-#{$name} {
     color: $color !important;
   }
-  .background-#{$name} {
+  .bg-#{$name} {
     background-color: $color !important;
   }
   .border-#{$name} {
