--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,37 +1,13 @@
-// NOTE:material color palettにおける各基準色を境界としてdarkenとlightenに割り振る
-$red-darken-4: #b00020;
-$cyan-lighten-1: #3cc9c5;
-$light-blue-darken-1: #50afff;
-$amber-lighten-5: #fffdfa;
-$amber-lighten-4: #fff8ed;
-$amber-darken-2: #ffa500;
-$orange-base: #ff9600;
-$deep-orange-lighten-2: #f78d83;
-$deep-orange-darken-1: #f2594b;
-$grey-darken-4: #333;
-$grey-darken-3: #666;
-$grey-darken-2: #777;
-$grey-darken-1: #808080;
-$grey-lighten-1: #999;
-$grey-lighten-2: #ccc;
-$grey-lighten-3: #f2f2f2;
-$grey-lighten-4: #f5f5f5;
+@use 'vuetify/lib/styles/settings/colors' as c;
+// NOTE: colorに関しては極力vuetifyにあるcolor setを使う
+// NOTE: blackにはgrey-darken-4を使う
+$main-color: map-get(c.$brown, 'darken-4');
+$sub-color: map-get(c.$brown, 'lighten-5');
+$accent-color: map-get(c.$light-blue, 'darken-4');
+$sub-accent-color: map-get(c.$light-blue, 'lighten-5');
 $colors: (
-  // 'red-darken-4': $red-darken-4,
-  // 'cyan-lighten-1': $cyan-lighten-1,
-  // 'light-blue-darken-1': $light-blue-darken-1,
-  // 'amber-lighten-5': $amber-lighten-5,
-  // 'amber-lighten-4': $amber-lighten-4,
-  // 'amber-darken-2': $amber-darken-2,
-  // 'orange-base': $orange-base,
-  // 'deep-orange-lighten-2': $deep-orange-lighten-2,
-  // 'deep-orange-darken-1': $deep-orange-darken-1,
-  // 'grey-darken-4': $grey-darken-4,
-  // 'grey-darken-3': $grey-darken-3,
-  // 'grey-darken-2': $grey-darken-2,
-  // 'grey-darken-1': $grey-darken-1,
-  // 'grey-lighten-1': $grey-lighten-1,
-  // 'grey-lighten-2': $grey-lighten-2,
-  // 'grey-lighten-3': $grey-lighten-3,
-  // 'grey-lighten-4': $grey-lighten-4
+  'main-color': $main-color,
+  'sub-color': $sub-color,
+  'accent-color': $accent-color,
+  'sub-accent-color': $sub-accent-color
 );
