--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,13 +1,12 @@
 @use 'vuetify/lib/styles/settings/colors' as c;
-// NOTE: colorに関しては極力vuetifyにあるcolor setを使う
 // NOTE: blackにはgrey-darken-4を使う
-$main-color: map-get(c.$brown, 'darken-4');
-$sub-color: map-get(c.$brown, 'lighten-5');
-$accent-color: map-get(c.$light-blue, 'darken-4');
-$sub-accent-color: map-get(c.$light-blue, 'lighten-5');
+$main-color: #0071bc;
+$sub-color: #e6eef3;
+$accent-color: #ff5050;
+$grey-color: #e7e7ea;
 $colors: (
   'main-color': $main-color,
   'sub-color': $sub-color,
   'accent-color': $accent-color,
-  'sub-accent-color': $sub-accent-color
+  'grey-color': $grey-color
 );
