--- a/assets/css/_utility.scss
+++ b/assets/css/_utility.scss
@@ -73,7 +73,7 @@ $cursor: alias, all-scroll, cell, copy, context-menu, crosshair, default, grab,
   vertical-text, zoom-in, zoom-out, unset;
 @each $i in $cursor {
   .cursor-#{$i} {
-    cursor: $i;
+    cursor: $i !important;
   }
 }
 $vertical-align: text-bottom, text-top, sub, super;
