--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,12 +1,16 @@
 @use 'vuetify/lib/styles/settings/colors' as c;
 // NOTE: blackにはgrey-darken-4を使う
-$main-color: #0071bc;
-$sub-color: #e6eef3;
-$accent-color: #ff5050;
-$grey-color: #e7e7ea;
+$main-color: #003566;
+$sub-color: #abc1d6;
+$accent-color: #fec500;
+$grey-color: #eeeef1;
+$white: #ffffff;
+$black: #333333;
 $colors: (
   'main-color': $main-color,
   'sub-color': $sub-color,
   'accent-color': $accent-color,
-  'grey-color': $grey-color
+  'grey-color': $grey-color,
+  'white': $white,
+  'black': $black
 );
