--- a/assets/css/_overwrite.scss
+++ b/assets/css/_overwrite.scss
@@ -3,8 +3,8 @@
 /*
 vuetifyのユーティリティクラスを追記・上書きするscss
 */
-$font-class: text-h1, text-h2, text-h3, text-h4, text-h5, text-h6, text-body-1,
-  text-body-2, text-subtitle-1, text-subtitle-2, text-caption;
+$font-class: text-h1, text-h2, text-h3, text-h4, text-h5, text-h6, text-body-1, text-body-2,
+  text-subtitle-1, text-subtitle-2, text-caption;
 @each $i in $font-class {
   .#{$i} {
     @extend .font-family-main;
